# Working_PQC_FS

./: .gitignore  CMakeLists.txt  README.md  SUBMISSION_CHECKLIST.md  camera_capture_test.py  citadel_io_generator.py  citadel_io_log.csv  citadel_telemetry_log.csv  cuda_aead.cu  cuda_integrity.cu  cuda_pqc.cu  cuda_pqc.h  install_bpf.py  measure_real_scaling.sh  measure_realistic_scaling.sh  plot_adaptive_results.py  plot_citadel_results.py  plot_results.py  pqc_admission.c  pqc_admission.h  pqc_anchor.c  pqc_anchor.h  pqc_block_job.h  pqc_file_key.c  pqc_file_key.h  pqc_fuse.c  pqc_fuse.cu  ros2_workload_sim.py  run_adaptive_bench.sh  run_bench.sh  run_benchmark_3way.sh  run_camera_benchmark.sh  run_citadel_bench.sh  run_experiment.sh  run_standard_bench.sh  standard_bench_results.json  standard_io_bench.py  trace_gup.bt
Paper/: 10_Discussion_and_Limitations.tex  11_Appendix.tex  1_Introduction.tex  2_Background.tex  3_Design.tex  4_Evaluation.tex  5_Related_Works.tex  6_Conclusion.tex  7_Implementation_Details.tex  8_Security_Analysis.tex  generated_qos_recovery_table.tex  main.bbl  main.tex  previous_paper_text.txt  references.bib
artifacts/: README.md  crash_replay_e8_test_matrix.csv  crash_replay_e8_test_matrix.json  crash_replay_e8_test_summary.csv  crash_replay_e8_test_summary.json  crash_replay_matrix.csv  crash_replay_matrix.json  crash_replay_summary.csv  crash_replay_summary.json  e1_results.json  e3_hero_results.json  e3_hero_summary.csv  e6_breakdown.json  e8_crash_replay.json  m3_qos_results.csv  m3_qos_results.json  m5_admission_sweep.csv  m5_admission_sweep.json  m5_admission_sweep_qdepth.csv  m5_admission_sweep_qdepth.json  m5_fastlane_stress.csv  m5_fastlane_stress.json  workload_map.csv
code/: CMakeLists.txt  README.md  build_targets.cmake  cuda_backends.cmake  cuda_feature_wiring.cmake  experiment_targets.cmake  include_paths.cmake  production_linkage.cmake  source_groups.cmake  source_manifest.cmake  summary.cmake  tests.cmake  toolchain.cmake
code/common/: includes.cmake  pqc_block_job.h  pqc_format.h
code/crypto/: includes.cmake  pqc_crypto.c  pqc_crypto.h  pqc_flush_crypto.c  pqc_flush_crypto.h  pqc_key_lifecycle.c  pqc_key_lifecycle.h  pqc_keyring.c  pqc_keyring.h  pqc_trust_boundary.c  pqc_trust_boundary.h  sources.cmake
code/experiment_targets/: gpu_benchmarks.cmake  jetson_probes.cmake  uma_smokes.cmake  workload_utilities.cmake
code/experiments/: bench_gpu_dataplane_negative_control.cu  bench_gpu_integrity.cu  bench_gpu_pqc.cu  benchmark_anchor_latency.py  benchmark_llm_interference.py  benchmark_tensorrt_interference.py  build_a1_throughput_decision.py  build_a3_batching_decision.py  build_a4_hidden_overhead_closeout.py  build_a5_fdatasync_storm_closeout.py  build_accepted_structure_audit.py  build_all_reports.py  build_app_recovery_report.py  build_architecture_claim_firewall.py  build_artifact_ledger_separation_audit.py  build_attacker_model_claim_guard.py  build_baseline_contract_immutability_verdict.py  build_case_study_takeaway_audit.py  build_concurrency_contract.py  build_crash_audit_report.py  build_crash_power_loss_claim_guard.py  build_cross_section_alignment_audit.py  build_crypto_plane_claim_guard.py  build_dangerous_claim_lint.py  build_design_eval_isomorphism_audit.py  build_dmcrypt_paper_verdict.py  build_energy_thermal_metadata_closeout.py  build_epoch_mode_depth.py  build_evaluation_completeness_matrix.py  build_evaluation_rq_audit.py  build_evidence_dashboard.py  build_figure_table_obligation_audit.py  build_final_claim_evidence_manifest.py  build_final_s2_closeout.py  build_first_two_pages_thesis_audit.py  build_freshness_ladder_claim_guard.py  build_frozen_workload_contract.py  build_fscrypt_paper_verdict.py  build_hero_result_contract.py  build_index_report.py  (+142 more)
code/frontend/: includes.cmake  pqc_fuse.c  pqc_fuse.h  pqc_main.c  sources.cmake
code/fs/: includes.cmake  pqc_fd_context.c  pqc_fd_context.h  pqc_file_io.c  pqc_file_io.h  pqc_file_lock.c  pqc_file_lock.h  pqc_namespace.c  pqc_namespace.h  pqc_parallel_commit.c  pqc_parallel_commit.h  pqc_posix.c  pqc_posix.h  pqc_recovery.c  pqc_recovery.h  sources.cmake
code/gpu/: cuda_aead.cu  cuda_aead.h  cuda_integrity.h  cuda_pqc.cu  cuda_pqc.h  includes.cmake
code/runtime/: includes.cmake  pqc_admission.c  pqc_admission.h  pqc_config.c  pqc_config.h  pqc_fuse_trace.c  pqc_fuse_trace.h  pqc_lifecycle.c  pqc_lifecycle.h  pqc_metrics.c  pqc_metrics.h  pqc_plane_trace.c  pqc_plane_trace.h  pqc_qos.c  pqc_qos.h  pqc_rekey.c  pqc_rekey.h  pqc_runtime.c  pqc_runtime.h  pqc_scheduler.c  pqc_scheduler.h  sources.cmake
code/storage/: includes.cmake  pqc_anchor.c  pqc_anchor.h  pqc_anchor_worker.c  pqc_anchor_worker.h  pqc_checkpoint.c  pqc_checkpoint.h  pqc_durability.c  pqc_durability.h  pqc_epoch_log.c  pqc_epoch_log.h  pqc_epoch_publish.c  pqc_epoch_publish.h  pqc_flush_batch.c  pqc_flush_batch.h  pqc_journal.c  pqc_journal.h  pqc_publish.c  pqc_publish.h  pqc_state.c  pqc_state.h  pqc_storage_path.c  pqc_storage_path.h  pqc_strict_publish.c  pqc_strict_publish.h  pqc_writeback.c  pqc_writeback.h  pqc_xattr.c  pqc_xattr.h  sources.cmake
code/summary/: build_summary.cmake  capability_summary.cmake
code/support/: includes.cmake  pqc_lock_profile.c  pqc_lock_profile.h  pqc_selftest.c  pqc_selftest.h  pqc_test_hooks.c  pqc_test_hooks.h  pqc_trace_sink.c  pqc_trace_sink.h  sources.cmake
code/tests/: build_graph_tests.cmake  cuda_integrity_tests.cmake  lock_contract_tests.cmake  macro_smokes.cmake  self_tests.cmake
experiments/: bench_gpu_integrity.cu  bench_gpu_pqc.cu  bench_io_uring_ebpf.cu  bench_iouring_poll.c  benchmark_anchor_latency.py  benchmark_llm_interference.py  benchmark_m4_freshness_tradeoff.py  benchmark_tensorrt_interference.py  build_accepted_structure_audit.py  build_all_reports.py  build_app_recovery_report.py  build_case_study_takeaway_audit.py  build_crash_audit_report.py  build_cross_section_alignment_audit.py  build_design_eval_isomorphism_audit.py  build_evaluation_completeness_matrix.py  build_evaluation_rq_audit.py  build_evidence_dashboard.py  (+103 more)
(+1682 files in other folders)
